# ot-commissioner

./: CMakeLists.txt  CommissionerTester.java
.github/workflows/: android-app-build.yml  android-app-release.yml  android-build.yml  android-release.yml  build.yml  tests.yml
.travis/: script.sh
binding/java/: pom.xml
bindings/: CMakeLists.txt  README.md  commissioner.i
include/commissioner/: border_agent.hpp  commissioner.hpp  defines.hpp  error.hpp  joiner.hpp  network_data.hpp
script/: bootstrap.sh
src/: CMakeLists.txt
src/app/: CMakeLists.txt  border_agent.hpp  commissioner_app.cpp  commissioner_app.hpp  commissioner_app_test.cpp  json.cpp  json.hpp
src/app/cli/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  main.cpp
src/common/: CMakeLists.txt  address.cpp  address.hpp  error_macros.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt
tests/integration/: test_operational_dataset.sh
tests/unit/: CMakeLists.txt  test_address.cpp  test_coap.cpp  test_coap_secure.cpp  test_commissioner_impl.cpp  test_cose.cpp  test_dtls.cpp  test_json.cpp  test_mesh_local_addr.cpp  test_pskc.cpp  test_token_manager.cpp
